Bug 1716433 - Create a pref to determine whether Windows font substitutes are applied always, or only as fallback for unavailable fonts. r=lsalzman

Differential Revision: https://phabricator.services.mozilla.com/D117890